--- a/myproject/myapp/templates/index.html
+++ b/myproject/myapp/templates/index.html
@@ -107,18 +107,19 @@
             </div>
             <div class="col-sm-9">
                 <h3>Обратная связь</h3>
-                <form action="">
+                <form action="contact/" method="post" onsubmit="sendForm(this); return false;">
+                    {% csrf_token %}
                     <div class="mb-3">
                         <label for="">Имя</label>
-                        <input type="text" class="form-control" placeholder="Имя">
+                        <input name="name" type="text" class="form-control" placeholder="Имя">
                     </div>
                     <div class="mb-3">
                         <label for="">E-mail</label>
-                        <input type="text" class="form-control" placeholder="E-mail">
+                        <input name="email" type="text" class="form-control" placeholder="E-mail">
                     </div>
                     <div class="mb-3">
                         <label for="">Сообщение</label>
-                        <textarea class="form-control" placeholder="Сообщение"></textarea>
+                        <textarea name="msg" class="form-control" placeholder="Сообщение"></textarea>
                     </div>
                     <div class="mb-3">
                         <input type="submit" class="form-control btn btn-primary">
@@ -131,5 +132,17 @@
         <p>&copy; 2024 "Код будущего"</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script>
+        function sendForm(form){
+            let formData = new FormData(form);
+            fetch('contact/', {
+                method: "POST",
+                body: formData
+            }).then(response=>response.text())
+                .then(result=>{
+                    form.innerHTML = `<h1>${result}</h1>`;
+                })
+        }
+    </script>
   </body>
 </html>
