--- a/myproject/myapp/templates/index.html
+++ b/myproject/myapp/templates/index.html
@@ -1,148 +1,19 @@
-<!doctype html>
-{% load static %}
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <script src="https://kit.fontawesome.com/750282b7c8.js" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Навбар</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Главная</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="#">Ссылка</a>
-                </li>
-                <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Выпадающий список
-                </a>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Действие</a></li>
-                    <li><a class="dropdown-item" href="#">Другое действие</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">Что-то еще здесь</a></li>
-                </ul>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link disabled">Отключенная</a>
-                </li>
-            </ul>
-            <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Поиск">
-                <button class="btn btn-outline-success" type="submit">Поиск</button>
-            </form>
-            </div>
-        </div>
-    </nav>
-
-    <div id="carouselExampleIndicators" class="carousel slide">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-            <img src="{% static '/img/html.jpg' %}" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-            <img src="{% static 'img/css.jpg' %}" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-            <img src="{% static 'img/python.webp' %}" class="d-block w-100" alt="...">
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Предыдущий</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Следующий</span>
-        </button>
-    </div>
-    <div class="container text-center py-5">
-        <h1 class="mb-4">Технологии</h1>
-        <div class="row">
-            <div class="col-sm-4">
-                <i class="fab fa-html5 fa-9x"></i>
-                <h2>HTML</h2>
-            </div>
-            <div class="col-sm-4">
-                <i class="fab fa-css3-alt fa-9x"></i>
-                <h2>CSS</h2>
-            </div>
-            <div class="col-sm-4">
-                <i class="fab fa-python fa-9x"></i>
-                <h2>Python</h2>
-            </div>
-        </div>
-    </div>
-    <div class="container-fluid text-light py-5" style="background: url({% static 'img/abstraktsiia_3d_fon_81497_1920x1080.jpg' %}); background-size: cover;">
-        <div class="col-sm-8 mx-auto p-3" style="background: rgba(0, 0, 0, .5); box-shadow: 0 0 20px black;">
-            <h2>Классический текст Lorem Ipsum, используемый с XVI века</h2>
-            <p>
-                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+{% extends 'base.html' %}
+{% block content %}
+    {% for article in articles %}
+        <!-- Post preview-->
+        <div class="post-preview">
+            <a href="/article/{{article.id}}">
+                <h2 class="post-title">{{article.title}}</h2>
+                <h3 class="post-subtitle">{{article.content|slice:"90"}}...</h3>
+            </a>
+            <p class="post-meta">
+                Posted
+                on {{article.created_at}}
             </p>
         </div>
-    </div>
-    <div class="container py-5">
-        <div class="row">
-            <div class="col-sm-3">
-                <h3>Контакты</h3>
-                <p><strong><i class="fas fa-map-marker-alt"></i> Адрес:</strong><br>г. Москва ул. Ленина д.7</p>
-                <p><strong><i class="fas fa-phone"></i> Телефон:</strong><br><a href="tel:+78889323432">+7 888 932-34-32</a></p>
-                <p><strong><i class="fas fa-clock"></i> Время работы:</strong><br>ПН-ПТ 9:00-18:00</p>
-            </div>
-            <div class="col-sm-9">
-                <h3>Обратная связь</h3>
-                <form action="contact/" method="post" onsubmit="sendForm(this); return false;">
-                    {% csrf_token %}
-                    <div class="mb-3">
-                        <label for="">Имя</label>
-                        <input name="name" type="text" class="form-control" placeholder="Имя">
-                    </div>
-                    <div class="mb-3">
-                        <label for="">E-mail</label>
-                        <input name="email" type="text" class="form-control" placeholder="E-mail">
-                    </div>
-                    <div class="mb-3">
-                        <label for="">Сообщение</label>
-                        <textarea name="msg" class="form-control" placeholder="Сообщение"></textarea>
-                    </div>
-                    <div class="mb-3">
-                        <input type="submit" class="form-control btn btn-primary">
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-    <footer class="container-fluid py-5 text-light text-center bg-dark">
-        <p>&copy; 2024 "Код будущего"</p>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script>
-        function sendForm(form){
-            let formData = new FormData(form);
-            fetch('contact/', {
-                method: "POST",
-                body: formData
-            }).then(response=>response.text())
-                .then(result=>{
-                    form.innerHTML = `<h1>${result}</h1>`;
-                })
-        }
-    </script>
-  </body>
-</html>
+        <!-- Divider-->
+        <hr class="my-4" />
+    {% endfor %}
+{% endblock %}
+
